--- a/LocusEffects/Assembly/ReleaseNotes.txt
+++ b/LocusEffects/Assembly/ReleaseNotes.txt
@@ -1,3 +1,9 @@
+04/18/2009 - 2.0.0.0
+Changed: Ported code to .NET 2.0 (Solution, Generics)
+Improved: Documentation, Sandcastle used instead of NDoc
+Fixed: Minor bug fixes
+Added: OpenGL locus effect (uses Tao Framework)
+
 24/12/2005 - 1.0.3.0
 Added: AnimatedImage locus effect
 Improved: Documentation
